--- a/app/src/main/res/layout/activity_send_money.xml
+++ b/app/src/main/res/layout/activity_send_money.xml
@@ -18,8 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@{viewModel.sendMsg}"
-            />
+            android:text="@{viewModel.sendMsg}"/>
 
         <Space
             android:layout_width="match_parent"
@@ -29,9 +28,15 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:onClick="@{() -> viewModel.startTransfer()}"
             android:text="@string/send"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:onClick="@{() -> viewModel.startTransferUrlScheme()}"
+            android:text="@string/send_url_scheme"/>
 
     </LinearLayout>
 </layout>
