--- a/app/src/main/res/layout/item_withdraw_account.xml
+++ b/app/src/main/res/layout/item_withdraw_account.xml
@@ -24,8 +24,8 @@
         android:paddingBottom="10dp">
 
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             app:img_url="@{accountItem.bankLogo}" />
 
@@ -39,16 +39,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:text="@{accountItem.accountNumber}"
                 android:textColor="@android:color/black"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{accountItem.balance}"
+                android:text= "@{String.format(@string/won, accountItem.balance)}"
                 android:textColor="@android:color/black"
-                android:textSize="12sp"/>
+                android:textSize="14sp"/>
 
         </LinearLayout>
 
